--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link  rel="stylesheet" href="style.css">
 </head>
 <header>
+    <img class="cabecalho-imagem" src="./img/logo.png" alt="logo do colegio estadual dr claudino dos santos">
+
+
+
      <h1>doutor claudino dos santos</h1>
          <u1>
              <li>horario de transporte escolar</li>
