--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <title>Document</title>
     <link  rel="stylesheet" href="style.css">
 </head>
-<header>
+<header class="cabecalho">
     <img class="cabecalho-imagem" src="./img/logo.png" alt="logo do colegio estadual dr claudino dos santos">
 
 
 
      <h1>doutor claudino dos santos</h1>
          <u1>
-             <li>horario de transporte escolar</li>
-             <li>biblioteca</li>
-             <li>cantina</li>
+             <li class="cabecalho-lista-item"> alunos</li>
+             <li class="cabecalho-lista-item">biblioteca</li>
+             <li class="cabecalho-lista-item">cantina</li>
 
          </u1>
 </header>
