--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
     <title>Document</title>
     <link  rel="stylesheet" href="style.css">
 </head>
-<header class="cabecalho">
+<header>
     <img class="cabecalho-imagem" src="./img/logo.png" alt="logo do colegio estadual dr claudino dos santos">
 
 
 
      <h1>doutor claudino dos santos</h1>
          <u1>
-             <li class="cabecalho-lista-item"> alunos</li>
-             <li class="cabecalho-lista-item">biblioteca</li>
-             <li class="cabecalho-lista-item">cantina</li>
+             <li>horario de transporte escolar</li>
+             <li>biblioteca</li>
+             <li>cantina</li>
 
          </u1>
 </header>
+<section>
+    <h2>locais</h2>
+    <p>--->cantina, a cantina e um dos melhores locais do colegio por ser a area alimenticia do colegio, aqui os alunos repoem suas energias para voltarem aos estudos e se concentrarem nos estudos</p>
+    <p>--->Informatica, a area informatica pode ser usada para diversos meios de aprendizados, tais como: programacao, robotica, engenharia eletronica, entre outros. fora que os sites disponibilisados pela SEED, nao envolvem nada que nao seja para o aprendizado dos alunos, cursos de informatica sao um otimo exemplo</p>
+    <p>--->biblioteca, a biblioteca escolar e um dos principais meios de educaco, nela, existem diversos livros, tanto educacionais quanto de contos, os alnos leem os livros para pesquisar sobre algo, sobre a segunda guerra ou ditadura, etc</p>
+</section>
 </html>
