--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
 
          </u1>
 </header>
-<section>
-    <h2>locais</h2>
-    <p>--->cantina, a cantina e um dos melhores locais do colegio por ser a area alimenticia do colegio, aqui os alunos repoem suas energias para voltarem aos estudos e se concentrarem nos estudos</p>
-    <p>--->Informatica, a area informatica pode ser usada para diversos meios de aprendizados, tais como: programacao, robotica, engenharia eletronica, entre outros. fora que os sites disponibilisados pela SEED, nao envolvem nada que nao seja para o aprendizado dos alunos, cursos de informatica sao um otimo exemplo</p>
-    <p>--->biblioteca, a biblioteca escolar e um dos principais meios de educaco, nela, existem diversos livros, tanto educacionais quanto de contos, os alnos leem os livros para pesquisar sobre algo, sobre a segunda guerra ou ditadura, etc</p>
+<section class="escola">
+    <h2 class="ecola-titulo">locais</h2>
+    <p class="escola-texto-um">cantina, a cantina e um dos melhores locais do colegio por ser a area alimenticia do colegio, 
+    aqui os alunos repoem suas energias para voltarem aos estudos e se concentrarem nos estudos</p>
+    <p class="escola-texto-dois">Informatica, a area informatica pode ser usada para diversos meios de aprendizados, tais como: programacao, robotica, engenharia eletronica, entre outros. 
+    fora que os sites disponibilisados pela SEED, nao envolvem nada que nao seja para o aprendizado dos alunos, cursos de informatica sao um otimo exemplo</p>
+    <p class="escola-texto-tres">biblioteca, a biblioteca escolar e um dos principais meios de educaco, nela, existem diversos livros, tanto educacionais quanto de contos,
+        os alnos leem os livros para pesquisar sobre algo, sobre a segunda guerra ou ditadura, etc</p>
+    <img class="escola-imagem" src="./img/books-and-glasses-red.png" alt="livros">
 </section>
 </html>
