--- a/index.html
+++ b/index.html
@@ -22,12 +22,18 @@
 </header>
 <section class="escola">
     <h2 class="ecola-titulo">locais</h2>
+    <div class="escola-conteudo">
     <p class="escola-texto-um">cantina, a cantina e um dos melhores locais do colegio por ser a area alimenticia do colegio, 
     aqui os alunos repoem suas energias para voltarem aos estudos e se concentrarem nos estudos</p>
     <p class="escola-texto-dois">Informatica, a area informatica pode ser usada para diversos meios de aprendizados, tais como: programacao, robotica, engenharia eletronica, entre outros. 
     fora que os sites disponibilisados pela SEED, nao envolvem nada que nao seja para o aprendizado dos alunos, cursos de informatica sao um otimo exemplo</p>
     <p class="escola-texto-tres">biblioteca, a biblioteca escolar e um dos principais meios de educaco, nela, existem diversos livros, tanto educacionais quanto de contos,
         os alnos leem os livros para pesquisar sobre algo, sobre a segunda guerra ou ditadura, etc</p>
-    <img class="escola-imagem" src="./img/books-and-glasses-red.png" alt="livros">
+    </div>
+    <img class="escola-imagem" src="./img/580b585b2edbce24c47b2772.png" alt="livros">
+</section>
+<section>
+    <h2 class="alunos-titulo"> conhecendo os alunos </h2>
+    <img class="aluno1" src="./img/images.jpeg" alt="livro aberto">
 </section>
 </html>
