--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
 </section>
 <section>
     <h2 class="alunos-titulo"> conhecendo os alunos </h2>
+    <div class="estudante-div">
     <img class="aluno1" src="./img/images.jpeg" alt="livro aberto">
+    <h3>estudante um</h3>
+    <img class="estudante-icone" src="./img/instagram.png" alt="instagram">
+    <img class="estudante-icone2" src="./img/Gmail_Logo_512px.png" alt="gmail">
+    <img class="estudante-icone3" src="./img/Whatsapp-PNG-Images-HD.png" alt="whatzapp">
+</div>
+<div class="estudante-div2">
+    <img class="aluno2" src="./img/topo-de-bolo-deidara-akatsuki-todos-os-temas.jpg">
+    <h3>aluno dois</h3>
+    <img class="estudante-icone" src="./img/instagram.png" alt="instagram">
+    <img class="estudante-icone2" src="./img/Gmail_Logo_512px.png" alt="gmail">
+    <img class="estudante-icone3" src="./img/Whatsapp-PNG-Images-HD.png" alt="whatzapp">
+</div>
 </section>
 </html>
