--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link  rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 <header>
     <img class="cabecalho-imagem" src="./img/logo.png" alt="logo do colegio estadual dr claudino dos santos">
@@ -33,20 +37,39 @@
     <img class="escola-imagem" src="./img/580b585b2edbce24c47b2772.png" alt="livros">
 </section>
 <section>
-    <h2 class="alunos-titulo"> conhecendo os alunos </h2>
+    <h2 class="aluno-titulo"> conhecendo os alunos </h2>
+    <div class="estudante-todos">
     <div class="estudante-div">
     <img class="aluno1" src="./img/images.jpeg" alt="livro aberto">
     <h3>estudante um</h3>
     <img class="estudante-icone" src="./img/instagram.png" alt="instagram">
-    <img class="estudante-icone2" src="./img/Gmail_Logo_512px.png" alt="gmail">
-    <img class="estudante-icone3" src="./img/Whatsapp-PNG-Images-HD.png" alt="whatzapp">
+    <img class="estudante-icone" src="./img/Gmail_Logo_512px.png" alt="gmail">
+    <img class="estudante-icone" src="./img/Whatsapp-PNG-Images-HD.png" alt="whatzapp">
 </div>
-<div class="estudante-div2">
-    <img class="aluno2" src="./img/topo-de-bolo-deidara-akatsuki-todos-os-temas.jpg">
-    <h3>aluno dois</h3>
+
+<div class="estudante-div">
+    <img class="aluno1" src="./img/images.jpeg" alt="livro aberto">
+    <h3>estudante um</h3>
     <img class="estudante-icone" src="./img/instagram.png" alt="instagram">
-    <img class="estudante-icone2" src="./img/Gmail_Logo_512px.png" alt="gmail">
-    <img class="estudante-icone3" src="./img/Whatsapp-PNG-Images-HD.png" alt="whatzapp">
+    <img class="estudante-icone" src="./img/Gmail_Logo_512px.png" alt="gmail">
+    <img class="estudante-icone" src="./img/Whatsapp-PNG-Images-HD.png" alt="whatzapp">
+</div>
+
+<div class="estudante-div">
+    <img class="aluno1" src="./img/images.jpeg" alt="livro aberto">
+    <h3>estudante um</h3>
+    <img class="estudante-icone" src="./img/instagram.png" alt="instagram">
+    <img class="estudante-icone" src="./img/Gmail_Logo_512px.png" alt="gmail">
+    <img class="estudante-icone" src="./img/Whatsapp-PNG-Images-HD.png" alt="whatzapp">
+</div>
+
+<div class="estudante-div">
+    <img class="aluno1" src="./img/images.jpeg" alt="livro aberto">
+    <h3>estudante um</h3>
+    <img class="estudante-icone" src="./img/instagram.png" alt="instagram">
+    <img class="estudante-icone" src="./img/Gmail_Logo_512px.png" alt="gmail">
+    <img class="estudante-icone" src="./img/Whatsapp-PNG-Images-HD.png" alt="whatzapp">
+</div>
 </div>
 </section>
-</html>
+</html>                                         
