--- a/index.html
+++ b/index.html
@@ -39,36 +39,36 @@
 <section>
     <h2 class="aluno-titulo"> conhecendo os alunos </h2>
     <div class="estudante-todos">
-    <div class="estudante-div">
+<div class="estudante-div">
     <img class="aluno1" src="./img/images.jpeg" alt="livro aberto">
     <h3>estudante um</h3>
-    <img class="estudante-icone" src="./img/instagram.png" alt="instagram">
-    <img class="estudante-icone" src="./img/Gmail_Logo_512px.png" alt="gmail">
-    <img class="estudante-icone" src="./img/Whatsapp-PNG-Images-HD.png" alt="whatzapp">
+    <a href="https://youtu.be/dQw4w9WgXcQ"><img class="estudante-icone" src="./img/instagram.png" alt="instagram"></a>
+    <a href="https://youtu.be/dQw4w9WgXcQ"><img class="estudante-icone" src="./img/Gmail_Logo_512px.png" alt="gmail"></a>
+    <a href="https://youtu.be/dQw4w9WgXcQ"><img class="estudante-icone" src="./img/Whatsapp-PNG-Images-HD.png" alt="whatzapp"></a>
 </div>
 
 <div class="estudante-div">
     <img class="aluno1" src="./img/images.jpeg" alt="livro aberto">
     <h3>estudante um</h3>
-    <img class="estudante-icone" src="./img/instagram.png" alt="instagram">
-    <img class="estudante-icone" src="./img/Gmail_Logo_512px.png" alt="gmail">
-    <img class="estudante-icone" src="./img/Whatsapp-PNG-Images-HD.png" alt="whatzapp">
+    <a href="https://sites.google.com/view/tripplethepotatoes/gmes/3d-games/dino-run-3"><img class="estudante-icone" src="./img/instagram.png" alt="instagram"></a>
+    <a href="https://sites.google.com/view/tripplethepotatoes/gmes/3d-games/dino-run-3"><img class="estudante-icone" src="./img/Gmail_Logo_512px.png" alt="gmail"></a>
+    <a href="https://sites.google.com/view/tripplethepotatoes/gmes/3d-games/dino-run-3"><img class="estudante-icone" src="./img/Whatsapp-PNG-Images-HD.png" alt="whatzapp"></a>
 </div>
 
 <div class="estudante-div">
     <img class="aluno1" src="./img/images.jpeg" alt="livro aberto">
     <h3>estudante um</h3>
-    <img class="estudante-icone" src="./img/instagram.png" alt="instagram">
-    <img class="estudante-icone" src="./img/Gmail_Logo_512px.png" alt="gmail">
-    <img class="estudante-icone" src="./img/Whatsapp-PNG-Images-HD.png" alt="whatzapp">
+    <a href="https://youtu.be/gKu2dFV5uPA"><img class="estudante-icone" src="./img/instagram.png" alt="instagram"></a>
+    <a href="https://youtu.be/gKu2dFV5uPA"><img class="estudante-icone" src="./img/Gmail_Logo_512px.png" alt="gmail"></a>
+    <a href="https://youtu.be/gKu2dFV5uPA"><img class="estudante-icone" src="./img/Whatsapp-PNG-Images-HD.png" alt="whatzapp"></a>
 </div>
 
 <div class="estudante-div">
     <img class="aluno1" src="./img/images.jpeg" alt="livro aberto">
     <h3>estudante um</h3>
-    <img class="estudante-icone" src="./img/instagram.png" alt="instagram">
-    <img class="estudante-icone" src="./img/Gmail_Logo_512px.png" alt="gmail">
-    <img class="estudante-icone" src="./img/Whatsapp-PNG-Images-HD.png" alt="whatzapp">
+    <a href="https://youtu.be/aWzKb071D9o"><img class="estudante-icone" src="./img/instagram.png" alt="instagram"></a>
+    <a href="https://youtu.be/aWzKb071D9o"><img class="estudante-icone" src="./img/Gmail_Logo_512px.png" alt="gmail"></a>
+    <a href="https://youtu.be/aWzKb071D9o"><img class="estudante-icone" src="./img/Whatsapp-PNG-Images-HD.png" alt="whatzapp"></a>
 </div>
 </div>
 </section>
