--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </div>
 
 <div class="estudante-div">
-    <img class="aluno1" src="./img/images.jpeg" alt="livro aberto">
+    <img class="aluno1" src="./img/topo-de-bolo-deidara-akatsuki-todos-os-temas.jpg" alt="livro aberto">
     <h3>estudante um</h3>
     <a href="https://sites.google.com/view/tripplethepotatoes/gmes/3d-games/dino-run-3"><img class="estudante-icone" src="./img/instagram.png" alt="instagram"></a>
     <a href="https://sites.google.com/view/tripplethepotatoes/gmes/3d-games/dino-run-3"><img class="estudante-icone" src="./img/Gmail_Logo_512px.png" alt="gmail"></a>
@@ -56,7 +56,7 @@
 </div>
 
 <div class="estudante-div">
-    <img class="aluno1" src="./img/images.jpeg" alt="livro aberto">
+    <img class="aluno1" src="./img/patrick_bateman.png" alt="livro aberto">
     <h3>estudante um</h3>
     <a href="https://youtu.be/gKu2dFV5uPA"><img class="estudante-icone" src="./img/instagram.png" alt="instagram"></a>
     <a href="https://youtu.be/gKu2dFV5uPA"><img class="estudante-icone" src="./img/Gmail_Logo_512px.png" alt="gmail"></a>
@@ -64,12 +64,17 @@
 </div>
 
 <div class="estudante-div">
-    <img class="aluno1" src="./img/images.jpeg" alt="livro aberto">
+    <img class="aluno1" src="./img/thiccomniman-fotor-bg-remover-202304209588.png" alt="livro aberto">
     <h3>estudante um</h3>
     <a href="https://youtu.be/aWzKb071D9o"><img class="estudante-icone" src="./img/instagram.png" alt="instagram"></a>
     <a href="https://youtu.be/aWzKb071D9o"><img class="estudante-icone" src="./img/Gmail_Logo_512px.png" alt="gmail"></a>
     <a href="https://youtu.be/aWzKb071D9o"><img class="estudante-icone" src="./img/Whatsapp-PNG-Images-HD.png" alt="whatzapp"></a>
 </div>
 </div>
+</section>
+<section>
+    <footer>
+        <h2 class="rodape"> Colgio Dr Claudino dos Santos</h2>
+    </footer>
 </section>
 </html>                                         
