--- a/index.html
+++ b/index.html
@@ -27,12 +27,9 @@
 <section class="escola">
     <h2 class="ecola-titulo">locais</h2>
     <div class="escola-conteudo">
-    <p class="escola-texto-um">cantina, a cantina e um dos melhores locais do colegio por ser a area alimenticia do colegio, 
-    aqui os alunos repoem suas energias para voltarem aos estudos e se concentrarem nos estudos</p>
-    <p class="escola-texto-dois">Informatica, a area informatica pode ser usada para diversos meios de aprendizados, tais como: programacao, robotica, engenharia eletronica, entre outros. 
-    fora que os sites disponibilisados pela SEED, nao envolvem nada que nao seja para o aprendizado dos alunos, cursos de informatica sao um otimo exemplo</p>
-    <p class="escola-texto-tres">biblioteca, a biblioteca escolar e um dos principais meios de educaco, nela, existem diversos livros, tanto educacionais quanto de contos,
-        os alnos leem os livros para pesquisar sobre algo, sobre a segunda guerra ou ditadura, etc</p>
+    <p class="escola-texto-um">Atualmente o Colégio Claudino conta com 983 alunos, distribuídos nos turnos da manhã, tarde e noite, Dentre as modalidades de ensino ofertadas à população estão: Ensino Fundamental fase II, Ensino Médio, Ensino profissionalizante e Educação de Jovens e Adultos.</p>
+    <p class="escola-texto-dois">O Colégio Estadual Dr. Claudino dos Santos foi criado em 06 de outubro de 1914. Recebeu este nome em homenagem a Claudino Dagoberto Ferreira dos Santos. Dr. Claudino foi um personagem de destaque em sua época, homem culto e de inteligência privilegiada</p>
+    <p class="escola-texto-tres">. Foi bacharel em direito, poeta, escritor e jornalista. Amava apresentações teatrais e literatura. Foi o fundador do Colégio Estadual do Paraná. Apesar de ter nascido no Recife, foi um personagem marcante na história do Paraná, exercendo importantes cargos como: Secretário do interior e da justiça, secretário de instrução pública, diretor do Colégio Estadual do Paraná e prefeito de Curitiba.</p>
     </div>
     <img class="escola-imagem" src="./img/580b585b2edbce24c47b2772.png" alt="livros">
 </section>
@@ -41,7 +38,7 @@
     <div class="estudante-todos">
 <div class="estudante-div">
     <img class="aluno1" src="./img/images.jpeg" alt="livro aberto">
-    <h3>estudante um</h3>
+    <h3>creeper do mine</h3>
     <a href="https://youtu.be/dQw4w9WgXcQ"><img class="estudante-icone" src="./img/instagram.png" alt="instagram"></a>
     <a href="https://youtu.be/dQw4w9WgXcQ"><img class="estudante-icone" src="./img/Gmail_Logo_512px.png" alt="gmail"></a>
     <a href="https://youtu.be/dQw4w9WgXcQ"><img class="estudante-icone" src="./img/Whatsapp-PNG-Images-HD.png" alt="whatzapp"></a>
@@ -49,7 +46,7 @@
 
 <div class="estudante-div">
     <img class="aluno1" src="./img/topo-de-bolo-deidara-akatsuki-todos-os-temas.jpg" alt="livro aberto">
-    <h3>estudante um</h3>
+    <h3>resident evil 4 classico</h3>
     <a href="https://sites.google.com/view/tripplethepotatoes/gmes/3d-games/dino-run-3"><img class="estudante-icone" src="./img/instagram.png" alt="instagram"></a>
     <a href="https://sites.google.com/view/tripplethepotatoes/gmes/3d-games/dino-run-3"><img class="estudante-icone" src="./img/Gmail_Logo_512px.png" alt="gmail"></a>
     <a href="https://sites.google.com/view/tripplethepotatoes/gmes/3d-games/dino-run-3"><img class="estudante-icone" src="./img/Whatsapp-PNG-Images-HD.png" alt="whatzapp"></a>
@@ -57,7 +54,7 @@
 
 <div class="estudante-div">
     <img class="aluno1" src="./img/patrick_bateman.png" alt="livro aberto">
-    <h3>estudante um</h3>
+    <h3>geladeira eletrolux duas portas branca</h3>
     <a href="https://youtu.be/gKu2dFV5uPA"><img class="estudante-icone" src="./img/instagram.png" alt="instagram"></a>
     <a href="https://youtu.be/gKu2dFV5uPA"><img class="estudante-icone" src="./img/Gmail_Logo_512px.png" alt="gmail"></a>
     <a href="https://youtu.be/gKu2dFV5uPA"><img class="estudante-icone" src="./img/Whatsapp-PNG-Images-HD.png" alt="whatzapp"></a>
@@ -65,7 +62,7 @@
 
 <div class="estudante-div">
     <img class="aluno1" src="./img/thiccomniman-fotor-bg-remover-202304209588.png" alt="livro aberto">
-    <h3>estudante um</h3>
+    <h3>gabriel</h3>
     <a href="https://youtu.be/aWzKb071D9o"><img class="estudante-icone" src="./img/instagram.png" alt="instagram"></a>
     <a href="https://youtu.be/aWzKb071D9o"><img class="estudante-icone" src="./img/Gmail_Logo_512px.png" alt="gmail"></a>
     <a href="https://youtu.be/aWzKb071D9o"><img class="estudante-icone" src="./img/Whatsapp-PNG-Images-HD.png" alt="whatzapp"></a>
@@ -77,4 +74,4 @@
         <h2 class="rodape"> Colgio Dr Claudino dos Santos</h2>
     </footer>
 </section>
-</html>                                         
+</html>                                                     
